--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,10 +1,38 @@
-name: Favorites anime and currently watching
-uses: lowlighter/metrics@latest
-with:
-  filename: metrics.plugin.anilist.svg
-  token: NOT_NEEDED
-  base: ""
-  plugin_anilist: yes
-  plugin_anilist_medias: anime
-  plugin_anilist_sections: favorites, watching
-  plugin_anilist_limit: 1
+name: AniList Metrics
+
+on:
+  push:
+    branches:
+      - main  # 替换为您的主要分支名称
+
+jobs:
+  generate_metrics:
+    name: Generate Metrics
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Generate Metrics
+        run: npm run generate
+
+      - name: Commit and push changes
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Update metrics [skip ci]
+          commit_user_name: AniList Metrics
+          commit_user_email: anilist.metrics@example.com
+
+      - name: Push changes
+        uses: ad-m/github-push-action@v0.6.0
+        with:
+          branch: main  # 替换为您的主要分支名称
