--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,7 +3,7 @@ name: AniList Metrics
 on:
   push:
     branches:
-      - main
+      - main  # 替换为您的主要分支名称
 
 jobs:
   generate_metrics:
@@ -12,10 +12,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2.4.4
+        uses: actions/checkout@v2
 
       - name: Setup Node.js
-        uses: actions/setup-node@v2.4.2
+        uses: actions/setup-node@v2
         with:
           node-version: 16
 
@@ -35,4 +35,4 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@v0.6.0
         with:
-          branch: main
+          branch: main  # 替换为您的主要分支名称
