--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,38 +1,84 @@
-name: AniList Metrics
+name:Anilist watch list and reading list
+category:social
+description:
+  This plugin displays favorites animes, mangas and characters from a [AniList](https://anilist.co) account.
+disclaimer: |
+  This plugin is not affiliated, associated, authorized, endorsed by, or in any way officially connected with [AniList](https://anilist.co).
+  All product and company names are trademarks™ or registered® trademarks of their respective holders.
+examples:
+  +for anime watchers: https://github.com/lowlighter/metrics/blob/examples/metrics.plugin.anilist.svg
+  for manga readers: https://github.com/lowlighter/metrics/blob/examples/metrics.plugin.anilist.manga.svg
+  +for waifus simp: https://github.com/lowlighter/metrics/blob/examples/metrics.plugin.anilist.characters.svg
+index: 4
+supports:
+  - user
+  - organization
+scopes: []
+inputs:
 
-on:
-  push:
-    branches:
-      - main  # 替换为您的主要分支名称
+  plugin_anilist:
+    description: |
+      Enable aniList plugin
+    type: boolean
+    default: no
+    extras:
+      - metrics.run.puppeteer.scrapping
 
-jobs:
-  generate_metrics:
-    name: Generate Metrics
-    runs-on: ubuntu-latest
+  plugin_anilist_user:
+    type: string
+    description: |
+      AniList login
+    default: .user.login
+    preset: no
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+  plugin_anilist_medias:
+    description: |
+      Medias types
+    type: array
+    format: comma-separated
+    default: anime, manga
+    values:
+      - anime
+      - manga
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16
+  plugin_anilist_sections:
+    description: |
+      Displayed sections
 
-      - name: Install dependencies
-        run: npm install
+      - `favorites` will display favorites from `plugin_anilist_medias`
+      - `watching` will display animes currently in watching list
+      - `reading` will display manga currently in reading list
+      - `characters` will display liked characters
+    type: array
+    format: comma-separated
+    default: favorites
+    example: favorites, watching, characters
+    values:
+      - favorites
+      - watching
+      - reading
+      - characters
 
-      - name: Generate Metrics
-        run: npm run generate
+  plugin_anilist_limit:
+    description: |
+      Display limit (medias)
+    type: number
+    default: 2
+    min: 0
+    zero: disable
 
-      - name: Commit and push changes
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Update metrics [skip ci]
-          commit_user_name: AniList Metrics
-          commit_user_email: anilist.metrics@example.com
+  plugin_anilist_limit_characters:
+    description: |
+      Display limit (characters)
+    type: number
+    default: 22
+    min: 0
+    zero: disable
 
-      - name: Push changes
-        uses: ad-m/github-push-action@v0.6.0
-        with:
-          branch: main  # 替换为您的主要分支名称
+  plugin_anilist_shuffle:
+    description: |
+      Shuffle data
+
+      Can be used to create varied outputs
+    type: boolean
+    default: yes
