--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,84 +1,25 @@
-name:Anilist watch list and reading list
-category:social
-description:
-  This plugin displays favorites animes, mangas and characters from a [AniList](https://anilist.co) account.
-disclaimer: |
-  This plugin is not affiliated, associated, authorized, endorsed by, or in any way officially connected with [AniList](https://anilist.co).
-  All product and company names are trademarks™ or registered® trademarks of their respective holders.
-examples:
-  +for anime watchers: https://github.com/lowlighter/metrics/blob/examples/metrics.plugin.anilist.svg
-  for manga readers: https://github.com/lowlighter/metrics/blob/examples/metrics.plugin.anilist.manga.svg
-  +for waifus simp: https://github.com/lowlighter/metrics/blob/examples/metrics.plugin.anilist.characters.svg
-index: 4
-supports:
-  - user
-  - organization
-scopes: []
-inputs:
+name: Favorites anime and currently watching
 
-  plugin_anilist:
-    description: |
-      Enable aniList plugin
-    type: boolean
-    default: no
-    extras:
-      - metrics.run.puppeteer.scrapping
+on:
+  push:
+    branches:
+      - main
 
-  plugin_anilist_user:
-    type: string
-    description: |
-      AniList login
-    default: .user.login
-    preset: no
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-  plugin_anilist_medias:
-    description: |
-      Medias types
-    type: array
-    format: comma-separated
-    default: anime, manga
-    values:
-      - anime
-      - manga
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-  plugin_anilist_sections:
-    description: |
-      Displayed sections
-
-      - `favorites` will display favorites from `plugin_anilist_medias`
-      - `watching` will display animes currently in watching list
-      - `reading` will display manga currently in reading list
-      - `characters` will display liked characters
-    type: array
-    format: comma-separated
-    default: favorites
-    example: favorites, watching, characters
-    values:
-      - favorites
-      - watching
-      - reading
-      - characters
-
-  plugin_anilist_limit:
-    description: |
-      Display limit (medias)
-    type: number
-    default: 2
-    min: 0
-    zero: disable
-
-  plugin_anilist_limit_characters:
-    description: |
-      Display limit (characters)
-    type: number
-    default: 22
-    min: 0
-    zero: disable
-
-  plugin_anilist_shuffle:
-    description: |
-      Shuffle data
-
-      Can be used to create varied outputs
-    type: boolean
-    default: yes
+    - name: Run script plugin
+      uses: lowlighter/metrics@latest
+      with:
+        filename: metrics.plugin.anilist.svg
+        token: NOT_NEEDED
+        base: ""
+        plugin_anilist: yes
+        plugin_anilist_medias: anime
+        plugin_anilist_sections: favorites, watching
+        plugin_anilist_limit: 1
